Cibyl (18)
	* Re-implemented sscanf due to a license incompatibility. The previous
	sscanf was taken from dietlibc, which is GPLed. I reimplemented the
	functionality here, to replace it with a LGPLed implementation like
	the rest of the Cibyl libraries (sans some BSD code)

	* Emit warning on missing syscalls in Python

	* Fixed the ELF symbol size fixup also in the Python translator
	(thanks to Ehud Shabtai)

	* Extended ctype.h with isgraph, ispunct, isxdigit, iscntrl and
	stdlib.h with strtoll and strtoull

	* Inputstreams are now marked upon open (if mark is available). This
	fixes a problem occuring in the newer Sun emulators

	* Fixed NOPH_InputStream_markSupported prototype

	* Fixed potential bug in NOPH_try/NOPH_catch - GCC could sometimes
	optimze away usage of addresses computed within the try/catch block
	(and if the exception occurs, these might never happen).

	* The configuration handling of the C++ translator has been improved
	and xcibyl-translator now accepts arbitrary configuration on the
	command line

	* Optimization of the call table is now *off* by default for both the
	Python and the C++ translator

	* The Python translator will now also handle labels pointing to
	instructions in delay slots (patch from Eran Netanel)

	* Added --force-python-translator / --force-cpp-translator to
	cibyl-mips2java to force which translator to use

	* Handle LWL/SWL/LWR/SWR for relocations (adding to the call table)

	* Fix for bug when adding things to the call table: The statement
	if (v & 3 != 0) was changed to if ( (v & 3) != 0 ). Thanks to Eran
	Netanel

	-- Simon Kagstrom <simon.kagstrom@gmail.com>,

Cibyl (17)
	* Refactored the instruction implementation. The instruction parser
	also recognises MIPS32 FPU instructions although these do not yet
	generate working code

	* Generate the string table in cibyl-syscalls.db with unique strings,
	i.e., reuse string offsets for strings which are already present
